# hyprie

./: .gitattributes  .gitignore  .gitmodules  .gitmodules.sparse  CMakeLists.txt  build.sh  readme.md  setup_submodules.sh
hpr/core/: color.hpp  dispatch.cpp  hprint.hpp  log.hpp  math.hpp  panic.hpp
hpr/editor/: editor.hpp  editor_data.hpp  editor_resolver.hpp  gizmo_query.cpp  gizmo_query.hpp  inspector_state.hpp  meshgen.cpp  meshgen.hpp
hpr/entity/: components_render.hpp  components_scene.hpp  ecs_registry.hpp  entity.hpp  systems_render.hpp  systems_scene.hpp
hpr/event/: command_emitter.hpp  command_stream.hpp  event.hpp  event_dispatcher.hpp  event_emitter.hpp  event_queue.hpp
hpr/input/: action.hpp  input_backend.hpp  input_binding.hpp  input_mapper.hpp  input_state.hpp
hpr/layer/: debug_layer.cpp  debug_layer.hpp  edit_layer.cpp  edit_layer.hpp  fx_layer.cpp  fx_layer.hpp  gizmo_layer.cpp  gizmo_layer.hpp  layer.hpp  layer_stack.hpp  scene_layer.cpp  scene_layer.hpp
hpr/render/: draw_queue_data.hpp  draw_view_data.hpp  forge_cache.hpp  fx_data.hpp  render_data.hpp  render_forge.cpp  render_forge.hpp  render_hub.hpp  render_passes.cpp  render_passes.hpp  render_queue.hpp  renderer.cpp  renderer.hpp  tile_draw_data.hpp
hpr/resource/: asset.hpp  asset_bank.hpp  asset_data.hpp  asset_keeper.cpp  asset_keeper.hpp  handle.hpp  handle_resolver.hpp  handle_store.hpp
hpr/runtime/: engine.cpp  engine.hpp  entry.cpp  frame_context.hpp  game.hpp
hpr/scene/: camera.cpp  camera.hpp  camera_controller.hpp  ghost_infra.hpp  light_common.hpp  scene.cpp  scene.hpp  scene_core.hpp  scene_data.hpp  scene_io.hpp  scene_io_data.hpp  scene_query.hpp  scene_resolver.hpp  scene_sim_data.hpp  storey_data.hpp  stratum.hpp  tile_data.hpp  tile_edit.hpp  tile_field.hpp  tile_query.hpp  voxel_data.hpp  voxel_field.hpp
hpr/thread/: job_latch.hpp  mpmc_ring.hpp  scheduler.hpp
hpr/ui/: nuklear_cfg.hpp  ui_alloc.hpp  ui_backend.cpp  ui_backend.hpp  ui_context.cpp  ui_context.hpp  ui_inspector.hpp  ui_resolver.hpp  ui_style.cpp  ui_style.hpp
shaders/: grid.glsl  outline_blend.glsl  outline_dilate.glsl  outline_mask.glsl  overlay.glsl  scene.glsl  tile.glsl  ui.glsl
test_scene/: dragon_0.glb  dragon_1.glb  scene.toml
